[package]
name = "ue-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argh = "0.1"
bzip2 = "0.4.4"
digest = "0.10.7"
env_logger = "0.10"
globset = "0.4"
log = "0.4"
protobuf = "3.2.0"
reqwest = "0.11"
sha1 = "0.10.6"
sha2 = "0.10"
tempfile = "3.8.1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
url = "2"
uuid = "1.2"

[dependencies.hard-xml]
path = "vendor/hard-xml"

[dependencies.omaha]
path = "omaha"

[dependencies.update-format-crau]
path = "update-format-crau"

[workspace]
members = [
    "omaha",
    "update-format-crau"
]

[[bin]]
name = "crau_verify"
path = "test/crau_verify.rs"

[profile.release]
# We do some offset calculations for extraction and
# the generated protobuf code does even more, let's
# be cautious
overflow-checks = true
# Reduce binary size by stripping debug symbols
strip = true
# Reduce binary size by using one codegen unit for similar gains as thin LTO
# (which we had problem with when cross-compiling)
codegen-units = 1
