[package]
name = "omaha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.2"
ct-codecs = "1"
url = "2"
anyhow = "1.0.75"
sha2 = "0.10.8"
sha1 = "0.10.6"
digest = "0.10.7"

[dependencies.hard-xml]
path = "../vendor/hard-xml"
